--- a/public/index.html
+++ b/public/index.html
@@ -9,5 +9,9 @@
   <link rel="stylesheet" href="styles.css"></head>
   <body>
     <app-root></app-root>
-  <script src="runtime.js" type="module"></script><script src="polyfills.js" type="module"></script><script src="vendor.js" type="module"></script><script src="main.js" type="module"></script></body>
+  <script src="runtime.js" type="module"></script>
+  <script src="polyfills.js" type="module"></script>
+  <script src="vendor.js" type="module"></script>
+  <script src="main.js" type="module"></script>
+</body>
 </html>
